--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
             <section class="section-format">
                 <img src="img\australia-quem.jfif" class="imagem-format">
-                <div id="div-format">
-                    <h2 id="titulo-format">Quem somos</h2>
+                <div class="div-format">
+                    <h2 class="titulo-format">Quem somos</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
                     <button name="button" id="botao-quemsomos" class="botao-section">Saiba mais</button>
                 </div>
@@ -37,8 +37,8 @@
             </section>
 
             <section class="section-format">
-                <div id="div-format">
-                    <h2 id="titulo-format">Cultura</h2>
+                <div class="div-format">
+                    <h2 class="titulo-format">Cultura</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
                     <button name="button" id="botao-cultura" class="botao-section">Saiba mais</button>
                 </div>
@@ -47,21 +47,23 @@
 
             <section class="section-format">
                 <img src="img\australia-landmark.jpg" class="imagem-format">
-                <div id="div-format">
-                    <h2 id="titulo-format">Paisagens</h2>
+                <div class="div-format">
+                    <h2 class="titulo-format">Paisagens</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
                     <button name="button" id="botao-paisagem" class="botao-section">Saiba mais</button>
                 </div>
             </section>
 
             <section class="section-format">
-                <div id="div-format">
-                    <h2 id="titulo-format">Sobre Nós</h2>
+                <div class="div-format">
+                    <h2 class="titulo-format">Sobre Nós</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
                     <button name="button" id="botao-sobre" class="botao-section">Saiba mais</button>
                 </div>
                 <img src="img\airplane-australia.jpg" class="imagem-format">
         </main>
 
-        <footer id="rodape">Feito por João Victor de Almeida Pinto</footer>
+        <footer id="rodape">
+            <p id="texto-rodape">Feito por João Victor de Almeida Pinto</p>
+        </footer>
     </body>
