Atualização no Menu
Colocando <a href="">

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             </div>
             <nav>
                 <ul class="conjunto-menu">
-                    <li class="item-menu">Quem somos</li>
-                    <li class="item-menu">Cultura</li>
-                    <li class="item-menu">Paisagens</li>
-                    <li class="item-menu">Contato</li>
+                    <li class="item-menu"><a href="#section-quemsomos">Quem somos</a></li>
+                    <li class="item-menu"><a href="#section-cultura">Cultura</a></li>
+                    <li class="item-menu"><a href="#section-paisagem">Paisagens</a></li>
+                    <li class="item-menu"><a href="#section-contato">Contato</a></li>
                 </ul>
             </nav>
         </header>
         <main>
 
-            <section class="section-format">
+            <section id="section-quemsomos" class="section-format">
                 <img src="img\australia-quem.jfif" class="imagem-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Quem somos</h2>
@@ -36,7 +36,7 @@
                 
             </section>
 
-            <section class="section-format">
+            <section id="section-cultura" class="section-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Cultura</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
@@ -45,7 +45,7 @@
                 <img src="img\australia_culture.jfif" class="imagem-format">
             </section>
 
-            <section class="section-format">
+            <section id="section-paisagem" class="section-format">
                 <img src="img\australia-landmark.jpg" class="imagem-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Paisagens</h2>
@@ -54,11 +54,11 @@
                 </div>
             </section>
 
-            <section class="section-format">
+            <section id="section-contato" class="section-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Sobre Nós</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
-                    <button name="button" id="botao-sobre" class="botao-section">Saiba mais</button>
+                    <button name="button" id="botao-contato" class="botao-section">Saiba mais</button>
                 </div>
                 <img src="img\airplane-australia.jpg" class="imagem-format">
         </main>
