--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Australia</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
-    <head>
+    </head>
 
     <body>
         <header>
@@ -27,43 +27,43 @@
         <main>
 
             <section id="section-quemsomos" class="section-format">
-                <img src="img\australia-quem.jfif" class="imagem-format">
+                <img src="img\australia-quem.jfif" id="australia-quem" class="imagem-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Quem somos</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
-                    <button name="button" id="botao-quemsomos" class="botao-section">Saiba mais</button>
+                    <button name="button" id="botao-quemsomos" class="botao-section"><a href="https://github.com/joaovpnt">Saiba mais</a></button>
                 </div>
-                
             </section>
 
             <section id="section-cultura" class="section-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Cultura</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
-                    <button name="button" id="botao-cultura" class="botao-section">Saiba mais</button>
+                    <button name="button" id="botao-cultura" class="botao-section"><a href="https://github.com/joaovpnt">Saiba mais</a></button>
                 </div>
-                <img src="img\australia_culture.jfif" class="imagem-format">
+                <img src="img\australia_culture.jfif" id="australia-culture"class="imagem-format">
             </section>
 
             <section id="section-paisagem" class="section-format">
-                <img src="img\australia-landmark.jpg" class="imagem-format">
+                <img src="img\australia-landmark.jpg" id="australia-paisagem" class="imagem-format">
                 <div class="div-format">
                     <h2 class="titulo-format">Paisagens</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
-                    <button name="button" id="botao-paisagem" class="botao-section">Saiba mais</button>
+                    <button name="button" id="botao-paisagem" class="botao-section"><a href="https://github.com/joaovpnt">Saiba mais</a></button>
                 </div>
             </section>
 
             <section id="section-contato" class="section-format">
                 <div class="div-format">
-                    <h2 class="titulo-format">Sobre Nós</h2>
+                    <h2 class="titulo-format">Contato</h2>
                     <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius at ligula in pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non massa sagittis, maximus enim in, dictum mauris. Fusce pretium est in pretium vehicula. Sed sem lectus, cursus nec nulla in, feugiat rutrum enim. Curabitur fringilla lorem at quam commodo, in accumsan dolor egestas. Duis ut fringilla nulla. Phasellus nec bibendum nisi.</p>
-                    <button name="button" id="botao-contato" class="botao-section">Saiba mais</button>
+                    <button name="button" id="botao-contato" class="botao-section"><a href="https://github.com/joaovpnt">Saiba mais</a></button>
                 </div>
-                <img src="img\airplane-australia.jpg" class="imagem-format">
+                <img src="img\airplane-australia.jpg" id="australia-contato" class="imagem-format">
         </main>
 
         <footer id="rodape">
-            <p id="texto-rodape">Feito por João Victor de Almeida Pinto</p>
+            <a href="https://github.com/joaovpnt">Feito por João Victor Pinto</a>
         </footer>
     </body>
+</html>
